--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <main>
             <div class="content">
                 <h1>Hi.</h1>
+                <nav class="subtle-nav">
+                    <a href="#">about</a> <span class="divider">|</span> <a href="#">work</a> <span class="divider">|</span> <a href="#">contact</a>
+                </nav>
             </div>
         </main>
         <footer>
-            <p class="copyright">&copy; 2025 Intelliquinte L.L.C. All rights reserved</p>
+            <p class="copyright">&copy; 2025 <a href="brand-guidelines/index.html" class="secret-link">Intelliquinte</a> L.L.C. All rights reserved</p>
         </footer>
     </div>
 </body>
