--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="content">
                 <h1>Hi.</h1>
                 <nav class="subtle-nav">
-                    <a href="#">about</a> <span class="divider">|</span> <a href="#">work</a> <span class="divider">|</span> <a href="#">contact</a>
+                    <a href="#">about</a> <span class="divider">|</span> <a href="#">work</a> <span class="divider">|</span> <a href="#">contact</a> <a href="/chat/index.html">CHAT</a>
                 </nav>
             </div>
         </main>
