--- a/34945874583948573945349.html
+++ b/34945874583948573945349.html
@@ -291,7 +291,7 @@
         <p class="subtitle">"Forever Chemicals" Threatening North Carolina Waters</p>
         <div class="author-info">
             <h3>Water Pollution Impact Project</h3>
-            <p>Environmental Science Honors</p>
+            <p>Environmental Science</p>
             <p>June 2025</p>
         </div>
     </div>
